# bbconf

./: .gitignore  MANIFEST.in  README.md  Taskfile.yaml  config.yaml  config_min.yaml  interactive_testing.py  manual_testing.py  pyproject.toml  setup.py  update_api_docs.sh
.github/workflows/: black.yml  cli-coverage.yml  format.yml  python-publish.yml  run-pytest.yml
bbcli/: __init__.py  bbconf.py
bbconf/: __init__.py  _version.py  alembic.ini  bbagent.py  bbconf.py  bbconf_new.py  const.py  const_new.py  db_utils.py  exceptions.py  helpers.py  model_parser.py  models.py  models_old.py
bbconf/config_parser/: __init__.py  bedbaseconfig.py  const.py  models.py  utils.py
bbconf/db_migrations/: env.py  utils.py
bbconf/db_migrations/versions/: 20310bfee23a_initial_migration.py  6a7dd9655e79_test_revision.py  ab665ffb92e6_test_revision.py
bbconf/models/: base_models.py  bed_models.py  bedset_models.py  drs_models.py  extras_models.py
bbconf/modules/: __init__.py  aggregation.py  bedfiles.py  bedsets.py  extras.py  models.py  objects.py
bbconf/schemas/: bedfiles_schema.yaml  bedsets_schema.yaml  distance_schema.yaml  distances_schema.yaml
bbconf/utils/: usage_events.csv
docs/: README.md  bbc_api.md  changelog.md  config.ipynb  demo.ipynb  install.md
docs_jupyter/: demo.ipynb
requirements/: requirements-all.txt  requirements-dev.txt  requirements-test.txt
tests/: README.md  config_test.yaml  conftest.py  test_bbagent.py  test_bbconf.py  test_bedfile.py  test_bedset.py  test_common.py  test_db.py  test_init.py  test_objects.py  test_universes.py  utils.py
tests/data/: config.yaml  config_invalid.yaml  config_min.yaml  config_noport.yaml
tests/old/: conftest.py
tests/old/data/: config.yaml  config_noport.yaml
