[project]
name = "bbconf"
version = "0.14.7"
description = "Configuration and data management tool for BEDbase"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Oleksandr Khoroshevskyi", email = "bnt4me@virginia.edu" },
]
keywords = ["bioinformatics", "genomics", "BED", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "yacman == 0.9.4",
    "sqlalchemy >= 2.0.0",
    "gtars >= 0.5.3",
    "geniml[ml] >= 0.8.4",
    "psycopg >= 3.1.15",
    "coloredlogs",
    "pydantic >= 2.9.0",
    "botocore >= 1.34.0, < 1.36.0",
    "boto3 >= 1.34.54, < 1.36.0",
    "pephubclient >= 0.4.5",
    "sqlalchemy_schemadisplay",
    "zarr < 3.0.0",
    "pyyaml >= 6.0.1",
    "s3fs >= 2024.3.1",
    "pandas < 3.0.0",
    "pybiocfilecache == 0.6.1",
    "umap-learn >= 0.5.8",
    "qdrant_client >= 1.16.1",
]

[project.urls]
Homepage = "https://github.com/databio/bbconf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "python-dotenv",
    "coverage",
    "smokeshow",
]
dev = [
    "ruff",
]

[tool.pytest.ini_options]
addopts = "-rfE"
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F403", "F405", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["bbconf"]
